kustomize/gateway/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: rag-agent-gateway
  namespace: istio-ingress-dev
spec:
  gatewayClassName: istio
  addresses:
  - type: IPAddress
    value: "192.168.71.210"
  listeners:
  - name: sparkchat
    hostname: "sparkchat.bytecourier.local"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: sparkchat-com
    hostname: "sparkchat.bytecourier.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: sparkbackend
    hostname: "sparkbackend.bytecourier.local"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: sparkbackend-com
    hostname: "sparkbackend.bytecourier.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: auth
    hostname: "auth.bytecourier.local"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: auth-com
    hostname: "auth.bytecourier.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
